<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:elevation="6dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_name"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/img1"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/jobText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_name"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/img1"
            android:layout_below="@id/nameText"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/img1"
            android:layout_below="@id/jobText"
            android:layout_marginStart="10dp"
            />

        <LinearLayout
            android:layout_below="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:layout_marginEnd="5dp" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:layout_marginStart="5dp" />

        </LinearLayout>


    </RelativeLayout>


</androidx.cardview.widget.CardView>